fix: text-align middle

--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -10,8 +10,7 @@ main {
   line-height: 1.65;
   margin: 0 auto;
   min-height: 100vh;
-  padding: 72px 0;
-  text-align: center;
+  padding: 0;
   max-width: 1200px !important;
 }
 h1 {
@@ -37,7 +36,7 @@ img {
 }
 
 ul {
-  list-style: initial !important;
+  list-style: initial !important;;
 }
 ul,ol {
   padding: revert !important;
